@@ -1,69 +1,55 @@
 package dev.salt.Ring20.service;
 
-import static org.springframework.http.HttpStatus.BAD_REQUEST;
-import static org.springframework.http.HttpStatus.NOT_FOUND;
-
 import dev.salt.Ring20.dto.WorkoutResponseDto;
 import dev.salt.Ring20.entity.ActivityLog;
 import dev.salt.Ring20.entity.Workout;
 import dev.salt.Ring20.repository.ActivityLogRepository;
-import dev.salt.Ring20.repository.TrainerRepository;
 import dev.salt.Ring20.repository.WorkoutRepository;
+
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.NoSuchElementException;
+
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.server.ResponseStatusException;
 
 @Service
 public class WorkoutService {
 
+    private static final String STATUS_STARTED = "STARTED";
     private final WorkoutRepository workoutRepository;
     private final ActivityLogRepository activityLogRepository;
 
-    public WorkoutService(
-            WorkoutRepository workoutRepository,
-            ActivityLogRepository activityLogRepository,
-            TrainerRepository trainerRepository) {
+    public WorkoutService(WorkoutRepository workoutRepository, ActivityLogRepository activityLogRepository) {
         this.workoutRepository = workoutRepository;
         this.activityLogRepository = activityLogRepository;
     }
 
     public String getWorkoutAudioUrl(Long id) {
-        Workout workout =
-                workoutRepository
-                        .findById(id)
-                        .orElseThrow(
-                                () -> new ResponseStatusException(NOT_FOUND, "Workout not found"));
+        validateId(id);
+        Workout workout = workoutRepository.findById(id).orElseThrow(() -> new NoSuchElementException("Workout not found with id: " + id));
 
         if (workout.getWorkoutAudio() == null || workout.getWorkoutAudio().isBlank()) {
-            throw new ResponseStatusException(NOT_FOUND, "Workout audio not found");
+            throw new NoSuchElementException("Workout audio not found with id: " + id);
         }
 
         return workout.getWorkoutAudio();
     }
 
-    @Transactional
+    @Transactional(readOnly = true)
     public List<WorkoutResponseDto> getAllWorkouts(boolean includeDisabled) {
-        List<Workout> workouts =
-                includeDisabled
-                        ? workoutRepository.findAll()
-                        : workoutRepository.findByEnabledTrue();
+        List<Workout> workouts = includeDisabled ? workoutRepository.findAll() : workoutRepository.findByEnabledTrue();
 
-        return workouts.stream().map(this::mapToResponse).collect(Collectors.toList());
+        return workouts.stream().map(this::mapToResponse).toList();
     }
 
-    @Transactional
+    @Transactional(readOnly = true)
     public WorkoutResponseDto getWorkoutById(Long id, boolean includeDisabled) {
-        Workout workout =
-                workoutRepository
-                        .findById(id)
-                        .orElseThrow(
-                                () -> new ResponseStatusException(NOT_FOUND, "Workout not found"));
+        validateId(id);
+        Workout workout = workoutRepository.findById(id).orElseThrow(() -> new NoSuchElementException("Workout not found with id: " + id));
 
         if (!includeDisabled && Boolean.FALSE.equals(workout.getEnabled())) {
-            throw new ResponseStatusException(NOT_FOUND, "Workout not found");
+            throw new NoSuchElementException("Workout not found with id: " + id);
         }
 
         return mapToResponse(workout);
@@ -75,14 +61,19 @@ public class WorkoutService {
         WorkoutResponseDto workout = getWorkoutById(id, false);
 
         if (userId != null) {
-            ActivityLog activityLog = new ActivityLog();
-            activityLog.setUserId(userId);
-            activityLog.setWorkoutId(workout.id()); // Record uses accessor style
-            activityLog.setStatus("STARTED");
-            activityLog.setCompletedAt(LocalDateTime.now());
-            activityLogRepository.save(activityLog);
-        }
+            boolean alreadyStarted =
+                    activityLogRepository.existsByUserIdAndWorkoutIdAndStatus(
+                            userId, id, STATUS_STARTED);
 
+            if(!alreadyStarted){
+                ActivityLog activityLog = new ActivityLog();
+                activityLog.setUserId(userId);
+                activityLog.setWorkoutId(workout.id()); // Record uses accessor style
+                activityLog.setStatus(STATUS_STARTED);
+                activityLog.setCreatedAt(LocalDateTime.now());
+                activityLogRepository.save(activityLog);
+            }
+        }
         return workout;
     }
 
@@ -98,38 +89,52 @@ public class WorkoutService {
         validateId(id);
         validateWorkoutForWrite(workout);
 
-        Workout existing =
-                workoutRepository
-                        .findById(id)
-                        .orElseThrow(
-                                () -> new ResponseStatusException(NOT_FOUND, "Workout not found"));
+        Workout existing = workoutRepository.findById(id).orElseThrow(() -> new NoSuchElementException("Workout not found with id: " + id));
 
-        workout.setId(existing.getId());
-        workout.setEnabled(existing.getEnabled());
-        Workout updated = workoutRepository.save(workout);
-        return mapToResponse(updated);
+        existing.setName(workout.getName());
+        existing.setDescription(workout.getDescription());
+        existing.setDashboardName(workout.getDashboardName());
+        existing.setDashboardDescription(workout.getDashboardDescription());
+        existing.setSubtitleText(workout.getSubtitleText());
+        existing.setInstructionsSubtitleText(workout.getInstructionsSubtitleText());
+        existing.setLevel(workout.getLevel());
+        existing.setType(workout.getType());
+        existing.setDurationSeconds(workout.getDurationSeconds());
+        existing.setInstructionsAudio(workout.getInstructionsAudio());
+        existing.setWorkoutAudio(workout.getWorkoutAudio());
+        existing.setInstructionsImage(workout.getInstructionsImage());
+        existing.setWorkoutImage(workout.getWorkoutImage());
+        existing.setInstructionsVideo(workout.getInstructionsVideo());
+        existing.setInstructionsVideoStart(workout.getInstructionsVideoStart());
+        existing.setInstructionsVideoStop(workout.getInstructionsVideoStop());
+        existing.setKneeFriendly(workout.getKneeFriendly());
+        existing.setLowImpact(workout.getLowImpact());
+        existing.setSeated(workout.getSeated());
+        existing.setBeginnerFriendly(workout.getBeginnerFriendly());
+        if (workout.getTrainer() != null) {
+            existing.setTrainer(workout.getTrainer());
+        }
+
+        return mapToResponse(workoutRepository.save(existing));
     }
 
     @Transactional
     public WorkoutResponseDto setWorkoutEnabled(Long id, boolean enabled) {
         validateId(id);
 
-        Workout existing =
-                workoutRepository
-                        .findById(id)
-                        .orElseThrow(
-                                () -> new ResponseStatusException(NOT_FOUND, "Workout not found"));
+        Workout existing = workoutRepository.findById(id).orElseThrow(() -> new NoSuchElementException("Workout not found with id: " + id));
 
         existing.setEnabled(enabled);
         Workout updated = workoutRepository.save(existing);
         return mapToResponse(updated);
     }
 
+    @Transactional
     public void deleteWorkout(Long id) {
         validateId(id);
 
         if (!workoutRepository.existsById(id)) {
-            throw new ResponseStatusException(NOT_FOUND, "Workout not found");
+            throw new NoSuchElementException("Workout not found with id: " + id);
         }
 
         workoutRepository.deleteById(id);
@@ -144,50 +149,31 @@ public class WorkoutService {
             trainerDTO = new WorkoutResponseDto.TrainerIdDTO(workout.getTrainer().getId());
         }
 
-        return new WorkoutResponseDto(
-                workout.getId(),
-                workout.getName(),
-                workout.getDescription(),
-                workout.getDashboardName(),
-                workout.getDashboardDescription(),
-                workout.getSubtitleText(),
-                workout.getInstructionsSubtitleText(),
-                workout.getLevel(),
-                workout.getType(),
-                workout.getDurationSeconds(),
-                workout.getInstructionsAudio(),
-                workout.getWorkoutAudio(),
-                workout.getInstructionsImage(),
-                workout.getWorkoutImage(),
-                workout.getInstructionsVideo(),
-                workout.getInstructionsVideoStart(),
-                workout.getInstructionsVideoStop(),
-                workout.getKneeFriendly(),
-                workout.getLowImpact(),
-                workout.getSeated(),
-                workout.getBeginnerFriendly(),
-                workout.getEnabled(),
-                trainerDTO);
+        return new WorkoutResponseDto(workout.getId(), workout.getName(), workout.getDescription(), workout.getDashboardName(), workout.getDashboardDescription(), workout.getSubtitleText(), workout.getInstructionsSubtitleText(), workout.getLevel(), workout.getType(), workout.getDurationSeconds(), workout.getInstructionsAudio(), workout.getWorkoutAudio(), workout.getInstructionsImage(), workout.getWorkoutImage(), workout.getInstructionsVideo(), workout.getInstructionsVideoStart(), workout.getInstructionsVideoStop(), workout.getKneeFriendly(), workout.getLowImpact(), workout.getSeated(), workout.getBeginnerFriendly(), workout.getEnabled(), trainerDTO);
     }
 
     private void validateId(Long id) {
         if (id == null || id <= 0) {
-            throw new ResponseStatusException(BAD_REQUEST, "id must be a positive number");
+            throw new IllegalArgumentException("Id must be a positive number.");
         }
     }
 
     private void validateWorkoutForWrite(Workout workout) {
         if (workout == null) {
-            throw new ResponseStatusException(BAD_REQUEST, "Workout body is required");
+            throw new IllegalArgumentException("Workout body is required.");
         }
 
         if (workout.getName() == null || workout.getName().isBlank()) {
-            throw new ResponseStatusException(BAD_REQUEST, "Workout name is required");
+            throw new IllegalArgumentException("Workout name is required.");
+        }
+
+        if (workout.getEnabled() == null) {
+            workout.setEnabled(true);
         }
 
         Integer durationSeconds = workout.getDurationSeconds();
         if (durationSeconds != null && durationSeconds < 0) {
-            throw new ResponseStatusException(BAD_REQUEST, "durationSeconds cannot be negative");
+            throw new IllegalArgumentException("DurationSeconds cannot be negative");
         }
     }
 }
